src/styles/adaptive.scss
/* ... */
@media screen and (max-width: 1181px) {
  .hero {
    padding-bottom: 220px;
  }

  .projects {
    padding: 40px 0;

    .projects__project {
      gap: 60px;

      .project__image {
        max-width: 500px;
      }
    }
  }

  .tech {
    padding: 45px 0 0;

    #infoBlock2 {
      top: 375px;
      left: 70px;
    }

    #infoBlock3 {
      bottom: -120px;
      right: 255px;
    }

    #infoBlock4 {
      bottom: 75px;
      right: 0;
    }
  }

  .steps {
    padding: 180px 0 45px;

    .steps__cards {
      margin-left: 60px;
      grid-column-gap: 20px;

      .card__title {
        font-size: 18px;
      }

      .card__description {
        font-size: 18px;
      }
    }
  }

  .guarantees {
    padding-bottom: 50px;

    .guarantees__title {
      margin-bottom: 40px;
    }

    .guarantees__cards {
      margin-bottom: 40px;
      gap: 20px;
    }

    .guarantees__benefits {
      grid-template-columns: repeat(3, 1fr);
      grid-row-gap: 40px;

      .guarantees__benefit {
        .benefit__circle {
          width: 100px;
          height: 100px;

          .benefit__image-img {
            height: 50px;
          }
        }

        .benefit__title {
          font-size: 18px;
        }

        .benefit__description {
          font-size: 18px;
        }
      }
    }
  }

  .consultation {
    padding: 50px 0;

    .container {
      gap: 40px;
    }

    .consultation__image {
      .consultation__image-img {
        max-width: 500px;
        height: 100%;
        object-fit: cover;
      }
    }

    .consultation__form {
      .consultation__form-form {
        .form__input {
          font-size: 18px;
        }
      }
    }
  }

  .map {
    padding: 100px 0;
    -webkit-background-size: cover;
    background-size: cover;

    .location-mark {
      display: none;
    }

    .map__content {
      .map__title {
        font-size: 30px;
      }

      .map__description {
        font-size: 18px;
      }

      .map__btn {
        width: 100%;
      }
    }
  }

  .footer {
    padding: 50px 0 80px;

    .container {
      grid-template-columns: repeat(3, 1fr);
      grid-row-gap: 50px;

      .footer__address {
        font-size: 16px;

        .address__address {
          margin-bottom: 17px;
        }
      }

      .footer__logo-social {
        .footer__logo {
          margin-bottom: 40px;
        }
      }
    }
  }

  .popup-menu-bg {
    .menu {
      grid-template-columns: 1fr 1fr;
      max-width: 960px;

      .menu__bar {
        .menu__title {
          font-size: 35px;
        }

        .popup__phone {
          display: block;

          .phone__number {
            text-align: left;
          }

          .phone__order-a-call {
            justify-content: left;
          }
        }
      }
    }
  }
}

@media screen and (max-width: 1101px) {
  .hero {
    .container {
      .hero__info {
        grid-column: 2 / 3;
      }
      .hero__social {
        grid-column: 3 / 4;
      }
    }
    .scroll-down {
      display: none;
    }
  }

  .projects {
    padding: 40px;

    .projects__project {
      justify-content: space-between;
      flex-flow: nowrap;
      padding: 40px 0;

      .project__image {
        order: 2;
        grid-template-rows: 375px 80px;
        grid-gap: 12px;
      }

      .project__info {
        display: flex;
        flex-direction: column;
        max-width: 360px;

        .project__title {
          order: 1;
          font-size: 24px;
          margin-bottom: 15px;
        }

        .project__description {
          order: 3;
          margin: 10px 0 30px;
          font-size: 16px;
        }

        .project__circles {
          order: 4;
          margin-bottom: 25px;

          .circles__circle {
            width: 85px;
            height: 85px;
            padding: 8px;

            .circle__text {
              font-size: 15px;
            }
          }
        }

        .project__buttons {
          order: 5;
        }
      }
    }

    .see-more {
      .see-more__text {
        font-size: 15px;
      }

      .see-more__arrow {
        width: 12px;
        height: 7px;
      }
    }
  }

  .tech {
    #infoBlock2 {
      top: 375px;
      left: 70px;
    }

    #infoBlock3 {
      bottom: -120px;
      right: 200px;
    }

    #infoBlock4 {
      bottom: 86px;
      right: 37px;

      .info-block__cursor {
        top: -30px;
        left: -175px;
        width: 160px;
        object-fit: contain;
      }
    }

    #infoBlock5 {
      top: 120px;
      right: 0;

      .info-block__cursor {
        top: -5px;
        left: -145px;
        width: 140px;
        object-fit: contain;
      }
    }
  }

  .steps {
    padding: 180px 0 45px;

    .steps__cards {
      margin-left: 20px;
      grid-column-gap: 20px;
    }
  }
}
/* ... */

